--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@
 
 #button-container{
 	width: 200px;
+	border-style: solid;
+	border-top: 2px;
 	display: flex;
 	flex-wrap: wrap;
 }
@@ -17,4 +19,10 @@
 
 .operation-button:hover{
 	background-color: darkgrey;
+}
+
+#display-container{
+	background-color: lightblue;
+	width: 200px;
+	border-style: solid;
 }
